Update vim post

--- a/_posts/2024-04-17-vim.md
+++ b/_posts/2024-04-17-vim.md
@@ -30,11 +30,12 @@ gruvbox 是一个 Vim 主题。
 call plug#begin()
 
 Plug 'morhetz/gruvbox'
-set background=dark
 
 call plug#end()
 
 autocmd vimenter * ++nested colorscheme gruvbox
+
+set background=dark
 ```
 
 ## [vim-devicons](https://github.com/ryanoasis/vim-devicons)
@@ -44,14 +45,9 @@ vim-devicons 为 Vim 插件添加图标。
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
 Plug 'ryanoasis/vim-devicons'
 
 call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
 ```
 
 ## [vim-airline](https://github.com/vim-airline/vim-airline)
@@ -61,16 +57,9 @@ vim-airline 为 Vim 添加 statusline。
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
 Plug 'vim-airline/vim-airline'
 
 call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
 ```
 
 ## [tabline](https://github.com/mkitt/tabline.vim)
@@ -80,60 +69,9 @@ tabline 为 Vim 美化 tabline。
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
 Plug 'mkitt/tabline.vim'
 
 call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
-```
-
-## [fzf](https://github.com/junegunn/fzf) and [fzf.vim](https://github.com/junegunn/fzf.vim)
-
-fzf 支持命令行模糊搜索，fzf.vim 支持在 Vim 中使用 fzf。
-
-```
-call plug#begin()
-
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
-call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
 ```
 
 ## [tarbar](https://github.com/preservim/tagbar)
@@ -143,35 +81,6 @@ tarbar 支持快速浏览当前文件的标签和结构。
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
 Plug 'majutsushi/tagbar'
 
 let g:tagbar_sort = 0
@@ -182,134 +91,20 @@ let g:tagbar_show_linenumbers = 1
 nnoremap <C-t> :TagbarToggle<CR>
 
 call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
 ```
 
-## [nerdtree](https://github.com/preservim/nerdtree)
+## [nerdtree](https://github.com/preservim/nerdtree), [vim-nerdtree-tabs](https://github.com/jistr/vim-nerdtree-tabs) and [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
 
 nerdtree 支持浏览文件系统。
 
-```
-call plug#begin()
-
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
-Plug 'majutsushi/tagbar'
-
-let g:tagbar_sort = 0
-let g:tagbar_autoclose = 1
-let g:tagbar_map_zoomwin = "a"
-let g:tagbar_show_linenumbers = 1
-
-nnoremap <C-t> :TagbarToggle<CR>
-
-Plug 'preservim/nerdtree'
-
-" Start NERDTree when Vim starts with a directory argument.
-autocmd StdinReadPre * let s:std_in = 1
-autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
-   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
-
-" Close the tab if NERDTree is the only window remaining in it.
-autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
-
-let g:NERDTreeMapToggleZoom = "a"
-let g:NERDTreeShowLineNumbers = 1
-
-nnoremap <C-n> :NERDTreeToggle<CR>
-nnoremap <C-f> :NERDTreeFind<CR>
-
-call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
-```
-
-## [vim-nerdtree-tabs](https://github.com/jistr/vim-nerdtree-tabs) and [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
-
-我用 vim-nerdtree-tabs 主要是用来配置当切换标签页的时候默认移动到文件中，而不是 NERDTree。
+用 vim-nerdtree-tabs 配置当切换标签页的时候默认移动到文件中，而不是 NERDTree。
 
 nerdtree-git-plugin 支持在 nerdtree 中显示文件的 `git status`。
 
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
-Plug 'majutsushi/tagbar'
-
-let g:tagbar_sort = 0
-let g:tagbar_autoclose = 1
-let g:tagbar_map_zoomwin = "a"
-let g:tagbar_show_linenumbers = 1
-
-nnoremap <C-t> :TagbarToggle<CR>
-
 Plug 'preservim/nerdtree'
-
-" Start NERDTree when Vim starts with a directory argument.
-autocmd StdinReadPre * let s:std_in = 1
-autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
-   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
-
-" Close the tab if NERDTree is the only window remaining in it.
-autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
 
 let g:NERDTreeMapToggleZoom = "a"
 let g:NERDTreeShowLineNumbers = 1
@@ -327,8 +122,44 @@ Plug 'Xuyuanp/nerdtree-git-plugin'
 
 call plug#end()
 
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
+" Start NERDTree when Vim starts with a directory argument.
+autocmd StdinReadPre * let s:std_in = 1
+autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
+   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
+
+" Close the tab if NERDTree is the only window remaining in it.
+autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
+```
+
+## [fzf](https://github.com/junegunn/fzf) and [fzf.vim](https://github.com/junegunn/fzf.vim)
+
+fzf 支持命令行模糊搜索，fzf.vim 支持在 Vim 中使用 fzf。
+
+```
+call plug#begin()
+
+Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
+Plug 'junegunn/fzf.vim'
+
+let g:fzf_layout = { 'down': '40%' }
+let g:fzf_action = {
+    \ 'ctrl-t': 'tab drop',
+    \ 'ctrl-s': 'split',
+    \ 'ctrl-v': 'vsplit'
+    \ }
+
+nnoremap <C-p> :call GFilesFallback()<CR>
+nnoremap <leader>b :Buffers<CR>
+nnoremap <leader>a :Ag<CR>
+nnoremap <leader>r :Rg<CR>
+
+function! GFilesFallback()
+  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
+  exec "normal " . command . "\<CR>"
+  return 0
+endfunction
+
+call plug#end()
 ```
 
 ## [vim-gitgutter](https://github.com/airblade/vim-gitgutter) and [vim-rainbow](https://github.com/frazrepo/vim-rainbow)
@@ -340,68 +171,6 @@ vim-rainbow 支持将成对的括号高亮显示。
 ```
 call plug#begin()
 
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
-Plug 'majutsushi/tagbar'
-
-let g:tagbar_sort = 0
-let g:tagbar_autoclose = 1
-let g:tagbar_map_zoomwin = "a"
-let g:tagbar_show_linenumbers = 1
-
-nnoremap <C-t> :TagbarToggle<CR>
-
-Plug 'preservim/nerdtree'
-
-" Start NERDTree when Vim starts with a directory argument.
-autocmd StdinReadPre * let s:std_in = 1
-autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
-   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
-
-" Close the tab if NERDTree is the only window remaining in it.
-autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
-
-let g:NERDTreeMapToggleZoom = "a"
-let g:NERDTreeShowLineNumbers = 1
-
-nnoremap <C-n> :NERDTreeToggle<CR>
-nnoremap <C-f> :NERDTreeFind<CR>
-
-Plug 'jistr/vim-nerdtree-tabs'
-
-let g:nerdtree_tabs_focus_on_files = 1
-let g:nerdtree_tabs_open_on_gui_startup = 0
-let g:nerdtree_tabs_open_on_console_startup = 0
-
-Plug 'Xuyuanp/nerdtree-git-plugin'
-
 Plug 'airblade/vim-gitgutter'
 
 Plug 'frazrepo/vim-rainbow'
@@ -409,9 +178,6 @@ Plug 'frazrepo/vim-rainbow'
 let g:rainbow_active = 1
 
 call plug#end()
-
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
 ```
 
 ## [vim-go](https://github.com/fatih/vim-go)
@@ -420,74 +186,6 @@ vim-go 支持 Go 语言相关操作。
 
 ```
 call plug#begin()
-
-Plug 'morhetz/gruvbox'
-
-Plug 'ryanoasis/vim-devicons'
-
-Plug 'vim-airline/vim-airline'
-
-Plug 'mkitt/tabline.vim'
-
-Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
-Plug 'junegunn/fzf.vim'
-
-let g:fzf_layout = { 'down': '40%' }
-let g:fzf_action = {
-    \ 'ctrl-t': 'tab drop',
-    \ 'ctrl-s': 'split',
-    \ 'ctrl-v': 'vsplit'
-    \ }
-
-nnoremap <C-p> :call GFilesFallback()<CR>
-nnoremap <leader>b :Buffers<CR>
-nnoremap <leader>a :Ag<CR>
-nnoremap <leader>r :Rg<CR>
-
-function! GFilesFallback()
-  let command = system('git rev-parse --is-inside-work-tree') =~ 'true' ? ':GFiles' : ':Files'
-  exec "normal " . command . "\<CR>"
-  return 0
-endfunction
-
-Plug 'majutsushi/tagbar'
-
-let g:tagbar_sort = 0
-let g:tagbar_autoclose = 1
-let g:tagbar_map_zoomwin = "a"
-let g:tagbar_show_linenumbers = 1
-
-nnoremap <C-t> :TagbarToggle<CR>
-
-Plug 'preservim/nerdtree'
-
-" Start NERDTree when Vim starts with a directory argument.
-autocmd StdinReadPre * let s:std_in = 1
-autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
-   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
-
-" Close the tab if NERDTree is the only window remaining in it.
-autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
-
-let g:NERDTreeMapToggleZoom = "a"
-let g:NERDTreeShowLineNumbers = 1
-
-nnoremap <C-n> :NERDTreeToggle<CR>
-nnoremap <C-f> :NERDTreeFind<CR>
-
-Plug 'jistr/vim-nerdtree-tabs'
-
-let g:nerdtree_tabs_focus_on_files = 1
-let g:nerdtree_tabs_open_on_gui_startup = 0
-let g:nerdtree_tabs_open_on_console_startup = 0
-
-Plug 'Xuyuanp/nerdtree-git-plugin'
-
-Plug 'airblade/vim-gitgutter'
-
-Plug 'frazrepo/vim-rainbow'
-
-let g:rainbow_active = 1
 
 Plug 'fatih/vim-go', { 'do': ':GoUpdateBinaries' }
 
@@ -501,8 +199,7 @@ au FileType go nnoremap <C-\> :GoImplements<CR>
 
 call plug#end()
 
-set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
+autocmd VimEnter * :clearjumps
 ```
 
 ## .vimrc
@@ -511,12 +208,34 @@ autocmd vimenter * ++nested colorscheme gruvbox
 call plug#begin()
 
 Plug 'morhetz/gruvbox'
-
 Plug 'ryanoasis/vim-devicons'
-
 Plug 'vim-airline/vim-airline'
-
 Plug 'mkitt/tabline.vim'
+
+Plug 'majutsushi/tagbar'
+
+let g:tagbar_sort = 0
+let g:tagbar_autoclose = 1
+let g:tagbar_map_zoomwin = "a"
+let g:tagbar_show_linenumbers = 1
+
+nnoremap <C-t> :TagbarToggle<CR>
+
+Plug 'preservim/nerdtree'
+
+let g:NERDTreeMapToggleZoom = "a"
+let g:NERDTreeShowLineNumbers = 1
+
+nnoremap <C-n> :NERDTreeToggle<CR>
+nnoremap <C-f> :NERDTreeFind<CR>
+
+Plug 'jistr/vim-nerdtree-tabs'
+
+let g:nerdtree_tabs_focus_on_files = 1
+let g:nerdtree_tabs_open_on_gui_startup = 0
+let g:nerdtree_tabs_open_on_console_startup = 0
+
+Plug 'Xuyuanp/nerdtree-git-plugin'
 
 Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
 Plug 'junegunn/fzf.vim'
@@ -538,39 +257,6 @@ function! GFilesFallback()
   exec "normal " . command . "\<CR>"
   return 0
 endfunction
-
-Plug 'majutsushi/tagbar'
-
-let g:tagbar_sort = 0
-let g:tagbar_autoclose = 1
-let g:tagbar_map_zoomwin = "a"
-let g:tagbar_show_linenumbers = 1
-
-nnoremap <C-t> :TagbarToggle<CR>
-
-Plug 'preservim/nerdtree'
-
-" Start NERDTree when Vim starts with a directory argument.
-autocmd StdinReadPre * let s:std_in = 1
-autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
-   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
-
-" Close the tab if NERDTree is the only window remaining in it.
-autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
-
-let g:NERDTreeMapToggleZoom = "a"
-let g:NERDTreeShowLineNumbers = 1
-
-nnoremap <C-n> :NERDTreeToggle<CR>
-nnoremap <C-f> :NERDTreeFind<CR>
-
-Plug 'jistr/vim-nerdtree-tabs'
-
-let g:nerdtree_tabs_focus_on_files = 1
-let g:nerdtree_tabs_open_on_gui_startup = 0
-let g:nerdtree_tabs_open_on_console_startup = 0
-
-Plug 'Xuyuanp/nerdtree-git-plugin'
 
 Plug 'airblade/vim-gitgutter'
 
@@ -604,6 +290,18 @@ function! CloseTab()
   return 0
 endfunction
 
+autocmd vimenter * ++nested colorscheme gruvbox
+
+" Start NERDTree when Vim starts with a directory argument.
+autocmd StdinReadPre * let s:std_in = 1
+autocmd VimEnter * if argc() == 1 && isdirectory(argv()[0]) && !exists('s:std_in') |
+   \ execute 'NERDTree' argv()[0] | wincmd p | enew | execute 'cd '.argv()[0] | endif
+
+" Close the tab if NERDTree is the only window remaining in it.
+autocmd BufEnter * if winnr('$') == 1 && exists('b:NERDTree') && b:NERDTree.isTabTree() | quit | endif
+
+autocmd VimEnter * :clearjumps
+
 " https://stackoverflow.com/a/22543937/19550472
 set nocompatible
 
@@ -614,22 +312,18 @@ set fileencoding=utf-8
 " https://vi.stackexchange.com/a/28721/51010
 set re=2
 
-set autoindent expandtab tabstop=4 shiftwidth=4
-set nu
-
 " https://stackoverflow.com/a/35794968/19550472
 highlight ColorColumn ctermbg=gray
 set colorcolumn=80
 
-autocmd VimEnter * :clearjumps
-
+set autoindent expandtab tabstop=4 shiftwidth=4
 set background=dark
-autocmd vimenter * ++nested colorscheme gruvbox
+set nu
 ```
 
 <hr>
 
 > 发布时间：2024-04-17<br>
-> 更新时间：2024-04-17<br>
+> 更新时间：2024-04-19<br>
 > 作者：[liangjunmo](https://github.com/liangjunmo)<br>
 > 版权：禁止任何形式的转载
